--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
+<!DOCTYPE:HTML>
+
+
+<head></head>
+<body></body>
+
+
+
+
+<h>Deleted Cities (2011, Richard Vijgen)</h>
 <p>Deleted Cities (2011) by Richard Vijgen is an illustration of old internet pages as a city map. In the early internet a service called Geocities hosted free websites where people would create a homepage talking about what they specialized in. Over time this grew into a massive collection of assorted homepages about various different things, before being purchased by Yahoo, which of course led to its eventual demise. Prior to it shutting down an archive was made totaling 650 gigabytes of data. This art piece turned it into an interactive map, grouping together neighborhoods of pages of similar topics that you can zoom into and pan around. Vijgen refers to the original deleted pages as a “digital Pompeii”. https://static-files.rhizome.org/Q3995/
 </p>
